@@ -48,7 +48,7 @@ public class verCore {
     /**
      * compile day
      */
-    public final static int day = 9;
+    public final static int day = 10;
 
     /**
      * statement of release
