@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.6.9-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-06-09 12:21:38, took 00:13:06, with 60 workers, on 3438 cases, 0 failed, 0 traces, 5 retries<br/>
+tested: 2024-06-09 19:10:11, took 00:12:55, with 60 workers, on 3440 cases, 0 failed, 0 traces, 4 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -498,6 +498,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-xconn09.tst">conn-xconn09.tst</a></td><td>success</td><td>cross connect vlan subinterfaces</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-xconn10.tst">conn-xconn10.tst</a></td><td>success</td><td>cross connect vlan subinterfaces of same interface</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-xconn11.tst">conn-xconn11.tst</a></td><td>success</td><td>cross connect tunnel interfaces</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-xconn12.tst">conn-xconn12.tst</a></td><td>success</td><td>cross connect different tunnel interfaces</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-xotpad.tst">conn-xotpad.tst</a></td><td>success</td><td>xot pad</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-access01.tst">crypt-access01.tst</a></td><td>success</td><td>access class</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-access02.tst">crypt-access02.tst</a></td><td>success</td><td>access map</td></tr>
@@ -1982,6 +1983,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout325.tst">p4lang-rout325.tst</a></td><td>success</td><td>p4lang: etherip server over ipv4 loopback</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout326.tst">p4lang-rout326.tst</a></td><td>success</td><td>p4lang: etherip server over ipv6 loopback</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout327.tst">p4lang-rout327.tst</a></td><td>success</td><td>p4lang: gre local connect</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout328.tst">p4lang-rout328.tst</a></td><td>success</td><td>p4lang: gre multicast routing</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-action01.tst">qos-action01.tst</a></td><td>success</td><td>qos ingress transmit action</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-action02.tst">qos-action02.tst</a></td><td>success</td><td>qos egress transmit action</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/qos-action03.tst">qos-action03.tst</a></td><td>success</td><td>qos ingress drop action</td></tr>
