@@ -543,6 +543,7 @@ qc pass: p4lang: etherip server over ipv6
 qc pass: p4lang: etherip server over ipv4 loopback
 qc pass: p4lang: etherip server over ipv6 loopback
 qc pass: p4lang: gre local connect
+qc pass: p4lang: gre multicast routing
 todo: acl to have fake knob that syn-rst, udp-port-unreach, at the dataplanes
 todo: inspection dropped sessions do be able to close the sessions properly at layer4
 todo: consider draft-ietf-idr-performance-routing
