@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.6.9-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-06-09 15:03:19, took 01:41:43, with 10 workers, on 545 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2024-06-09 22:54:26, took 01:43:28, with 10 workers, on 546 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: java -Xmx256m -jar rtr.jar<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -564,4 +564,5 @@ jvm: java -Xmx256m -jar rtr.jar<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout325.tst">p4lang-rout325.tst</a></td><td>success</td><td>p4lang: etherip server over ipv4 loopback</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout326.tst">p4lang-rout326.tst</a></td><td>success</td><td>p4lang: etherip server over ipv6 loopback</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout327.tst">p4lang-rout327.tst</a></td><td>not applicable</td><td>p4lang: gre local connect</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/p4lang-rout328.tst">p4lang-rout328.tst</a></td><td>not applicable</td><td>p4lang: gre multicast routing</td></tr>
 </tbody></table></body></html>
